# video2gif

./: app.py  packages.txt  pyproject.toml  requirements.txt
