[tool.poetry]
name = "video2gif"
version = "0.1.0"
description = ""
authors = ["kei1s <keiichisakamoto0112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.0"
moviepy = "1.0.3"
pillow = "9.4.0"
decorator = "4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
